parser.out
Created by PLY version 3.2 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> root
Rule 1     root -> element
Rule 2     root -> element CDATA
Rule 3     root -> CDATA element
Rule 4     root -> CDATA element CDATA
Rule 5     element -> opentag children closetag
Rule 6     element -> lonetag
Rule 7     opentag -> OPENTAGOPEN TAGATTRNAME attributes TAGCLOSE
Rule 8     closetag -> CLOSETAGOPEN TAGATTRNAME TAGCLOSE
Rule 9     lonetag -> OPENTAGOPEN TAGATTRNAME attributes LONETAGCLOSE
Rule 10    attributes -> attribute attributes
Rule 11    attributes -> empty
Rule 12    attribute -> TAGATTRNAME ATTRASSIGN attrvalue
Rule 13    attrvalue -> ATTRVALUE1OPEN ATTRVALUE1STRING ATTRVALUE1CLOSE
Rule 14    attrvalue -> ATTRVALUE2OPEN ATTRVALUE2STRING ATTRVALUE2CLOSE
Rule 15    children -> child children
Rule 16    children -> empty
Rule 17    child -> element
Rule 18    child -> CDATA
Rule 19    empty -> <empty>

Terminals, with rules where they appear

ATTRASSIGN           : 12
ATTRVALUE1CLOSE      : 13
ATTRVALUE1OPEN       : 13
ATTRVALUE1STRING     : 13
ATTRVALUE2CLOSE      : 14
ATTRVALUE2OPEN       : 14
ATTRVALUE2STRING     : 14
CDATA                : 2 3 4 4 18
CLOSETAGOPEN         : 8
LONETAGCLOSE         : 9
OPENTAGOPEN          : 7 9
TAGATTRNAME          : 7 8 9 12
TAGCLOSE             : 7 8
error                : 

Nonterminals, with rules where they appear

attribute            : 10
attributes           : 7 9 10
attrvalue            : 12
child                : 15
children             : 5 15
closetag             : 5
element              : 1 2 3 4 17
empty                : 11 16
lonetag              : 6
opentag              : 5
root                 : 0

Parsing method: SLR

state 0

    (0) S' -> . root
    (1) root -> . element
    (2) root -> . element CDATA
    (3) root -> . CDATA element
    (4) root -> . CDATA element CDATA
    (5) element -> . opentag children closetag
    (6) element -> . lonetag
    (7) opentag -> . OPENTAGOPEN TAGATTRNAME attributes TAGCLOSE
    (9) lonetag -> . OPENTAGOPEN TAGATTRNAME attributes LONETAGCLOSE

    CDATA           shift and go to state 3
    OPENTAGOPEN     shift and go to state 1

    lonetag                        shift and go to state 4
    element                        shift and go to state 2
    root                           shift and go to state 5
    opentag                        shift and go to state 6

state 1

    (7) opentag -> OPENTAGOPEN . TAGATTRNAME attributes TAGCLOSE
    (9) lonetag -> OPENTAGOPEN . TAGATTRNAME attributes LONETAGCLOSE

    TAGATTRNAME     shift and go to state 7


state 2

    (1) root -> element .
    (2) root -> element . CDATA

    $end            reduce using rule 1 (root -> element .)
    CDATA           shift and go to state 8


state 3

    (3) root -> CDATA . element
    (4) root -> CDATA . element CDATA
    (5) element -> . opentag children closetag
    (6) element -> . lonetag
    (7) opentag -> . OPENTAGOPEN TAGATTRNAME attributes TAGCLOSE
    (9) lonetag -> . OPENTAGOPEN TAGATTRNAME attributes LONETAGCLOSE

    OPENTAGOPEN     shift and go to state 1

    lonetag                        shift and go to state 4
    element                        shift and go to state 9
    opentag                        shift and go to state 6

state 4

    (6) element -> lonetag .

    $end            reduce using rule 6 (element -> lonetag .)
    CDATA           reduce using rule 6 (element -> lonetag .)
    OPENTAGOPEN     reduce using rule 6 (element -> lonetag .)
    CLOSETAGOPEN    reduce using rule 6 (element -> lonetag .)


state 5

    (0) S' -> root .



state 6

    (5) element -> opentag . children closetag
    (15) children -> . child children
    (16) children -> . empty
    (17) child -> . element
    (18) child -> . CDATA
    (19) empty -> .
    (5) element -> . opentag children closetag
    (6) element -> . lonetag
    (7) opentag -> . OPENTAGOPEN TAGATTRNAME attributes TAGCLOSE
    (9) lonetag -> . OPENTAGOPEN TAGATTRNAME attributes LONETAGCLOSE

    CDATA           shift and go to state 11
    TAGCLOSE        reduce using rule 19 (empty -> .)
    LONETAGCLOSE    reduce using rule 19 (empty -> .)
    CLOSETAGOPEN    reduce using rule 19 (empty -> .)
    OPENTAGOPEN     shift and go to state 1

    element                        shift and go to state 10
    child                          shift and go to state 12
    lonetag                        shift and go to state 4
    children                       shift and go to state 13
    empty                          shift and go to state 14
    opentag                        shift and go to state 6

state 7

    (7) opentag -> OPENTAGOPEN TAGATTRNAME . attributes TAGCLOSE
    (9) lonetag -> OPENTAGOPEN TAGATTRNAME . attributes LONETAGCLOSE
    (10) attributes -> . attribute attributes
    (11) attributes -> . empty
    (12) attribute -> . TAGATTRNAME ATTRASSIGN attrvalue
    (19) empty -> .

    TAGATTRNAME     shift and go to state 15
    TAGCLOSE        reduce using rule 19 (empty -> .)
    LONETAGCLOSE    reduce using rule 19 (empty -> .)
    CLOSETAGOPEN    reduce using rule 19 (empty -> .)

    attributes                     shift and go to state 17
    empty                          shift and go to state 18
    attribute                      shift and go to state 16

state 8

    (2) root -> element CDATA .

    $end            reduce using rule 2 (root -> element CDATA .)


state 9

    (3) root -> CDATA element .
    (4) root -> CDATA element . CDATA

    $end            reduce using rule 3 (root -> CDATA element .)
    CDATA           shift and go to state 19


state 10

    (17) child -> element .

    CDATA           reduce using rule 17 (child -> element .)
    OPENTAGOPEN     reduce using rule 17 (child -> element .)
    CLOSETAGOPEN    reduce using rule 17 (child -> element .)


state 11

    (18) child -> CDATA .

    CDATA           reduce using rule 18 (child -> CDATA .)
    OPENTAGOPEN     reduce using rule 18 (child -> CDATA .)
    CLOSETAGOPEN    reduce using rule 18 (child -> CDATA .)


state 12

    (15) children -> child . children
    (15) children -> . child children
    (16) children -> . empty
    (17) child -> . element
    (18) child -> . CDATA
    (19) empty -> .
    (5) element -> . opentag children closetag
    (6) element -> . lonetag
    (7) opentag -> . OPENTAGOPEN TAGATTRNAME attributes TAGCLOSE
    (9) lonetag -> . OPENTAGOPEN TAGATTRNAME attributes LONETAGCLOSE

    CDATA           shift and go to state 11
    TAGCLOSE        reduce using rule 19 (empty -> .)
    LONETAGCLOSE    reduce using rule 19 (empty -> .)
    CLOSETAGOPEN    reduce using rule 19 (empty -> .)
    OPENTAGOPEN     shift and go to state 1

    element                        shift and go to state 10
    child                          shift and go to state 12
    lonetag                        shift and go to state 4
    children                       shift and go to state 20
    empty                          shift and go to state 14
    opentag                        shift and go to state 6

state 13

    (5) element -> opentag children . closetag
    (8) closetag -> . CLOSETAGOPEN TAGATTRNAME TAGCLOSE

    CLOSETAGOPEN    shift and go to state 21

    closetag                       shift and go to state 22

state 14

    (16) children -> empty .

    CLOSETAGOPEN    reduce using rule 16 (children -> empty .)


state 15

    (12) attribute -> TAGATTRNAME . ATTRASSIGN attrvalue

    ATTRASSIGN      shift and go to state 23


state 16

    (10) attributes -> attribute . attributes
    (10) attributes -> . attribute attributes
    (11) attributes -> . empty
    (12) attribute -> . TAGATTRNAME ATTRASSIGN attrvalue
    (19) empty -> .

    TAGATTRNAME     shift and go to state 15
    TAGCLOSE        reduce using rule 19 (empty -> .)
    LONETAGCLOSE    reduce using rule 19 (empty -> .)
    CLOSETAGOPEN    reduce using rule 19 (empty -> .)

    attribute                      shift and go to state 16
    empty                          shift and go to state 18
    attributes                     shift and go to state 24

state 17

    (7) opentag -> OPENTAGOPEN TAGATTRNAME attributes . TAGCLOSE
    (9) lonetag -> OPENTAGOPEN TAGATTRNAME attributes . LONETAGCLOSE

    TAGCLOSE        shift and go to state 26
    LONETAGCLOSE    shift and go to state 25


state 18

    (11) attributes -> empty .

    TAGCLOSE        reduce using rule 11 (attributes -> empty .)
    LONETAGCLOSE    reduce using rule 11 (attributes -> empty .)


state 19

    (4) root -> CDATA element CDATA .

    $end            reduce using rule 4 (root -> CDATA element CDATA .)


state 20

    (15) children -> child children .

    CLOSETAGOPEN    reduce using rule 15 (children -> child children .)


state 21

    (8) closetag -> CLOSETAGOPEN . TAGATTRNAME TAGCLOSE

    TAGATTRNAME     shift and go to state 27


state 22

    (5) element -> opentag children closetag .

    $end            reduce using rule 5 (element -> opentag children closetag .)
    CDATA           reduce using rule 5 (element -> opentag children closetag .)
    OPENTAGOPEN     reduce using rule 5 (element -> opentag children closetag .)
    CLOSETAGOPEN    reduce using rule 5 (element -> opentag children closetag .)


state 23

    (12) attribute -> TAGATTRNAME ATTRASSIGN . attrvalue
    (13) attrvalue -> . ATTRVALUE1OPEN ATTRVALUE1STRING ATTRVALUE1CLOSE
    (14) attrvalue -> . ATTRVALUE2OPEN ATTRVALUE2STRING ATTRVALUE2CLOSE

    ATTRVALUE1OPEN  shift and go to state 29
    ATTRVALUE2OPEN  shift and go to state 30

    attrvalue                      shift and go to state 28

state 24

    (10) attributes -> attribute attributes .

    TAGCLOSE        reduce using rule 10 (attributes -> attribute attributes .)
    LONETAGCLOSE    reduce using rule 10 (attributes -> attribute attributes .)


state 25

    (9) lonetag -> OPENTAGOPEN TAGATTRNAME attributes LONETAGCLOSE .

    $end            reduce using rule 9 (lonetag -> OPENTAGOPEN TAGATTRNAME attributes LONETAGCLOSE .)
    CDATA           reduce using rule 9 (lonetag -> OPENTAGOPEN TAGATTRNAME attributes LONETAGCLOSE .)
    OPENTAGOPEN     reduce using rule 9 (lonetag -> OPENTAGOPEN TAGATTRNAME attributes LONETAGCLOSE .)
    CLOSETAGOPEN    reduce using rule 9 (lonetag -> OPENTAGOPEN TAGATTRNAME attributes LONETAGCLOSE .)


state 26

    (7) opentag -> OPENTAGOPEN TAGATTRNAME attributes TAGCLOSE .

    CDATA           reduce using rule 7 (opentag -> OPENTAGOPEN TAGATTRNAME attributes TAGCLOSE .)
    OPENTAGOPEN     reduce using rule 7 (opentag -> OPENTAGOPEN TAGATTRNAME attributes TAGCLOSE .)
    CLOSETAGOPEN    reduce using rule 7 (opentag -> OPENTAGOPEN TAGATTRNAME attributes TAGCLOSE .)


state 27

    (8) closetag -> CLOSETAGOPEN TAGATTRNAME . TAGCLOSE

    TAGCLOSE        shift and go to state 31


state 28

    (12) attribute -> TAGATTRNAME ATTRASSIGN attrvalue .

    TAGATTRNAME     reduce using rule 12 (attribute -> TAGATTRNAME ATTRASSIGN attrvalue .)
    TAGCLOSE        reduce using rule 12 (attribute -> TAGATTRNAME ATTRASSIGN attrvalue .)
    LONETAGCLOSE    reduce using rule 12 (attribute -> TAGATTRNAME ATTRASSIGN attrvalue .)


state 29

    (13) attrvalue -> ATTRVALUE1OPEN . ATTRVALUE1STRING ATTRVALUE1CLOSE

    ATTRVALUE1STRING shift and go to state 32


state 30

    (14) attrvalue -> ATTRVALUE2OPEN . ATTRVALUE2STRING ATTRVALUE2CLOSE

    ATTRVALUE2STRING shift and go to state 33


state 31

    (8) closetag -> CLOSETAGOPEN TAGATTRNAME TAGCLOSE .

    $end            reduce using rule 8 (closetag -> CLOSETAGOPEN TAGATTRNAME TAGCLOSE .)
    CDATA           reduce using rule 8 (closetag -> CLOSETAGOPEN TAGATTRNAME TAGCLOSE .)
    OPENTAGOPEN     reduce using rule 8 (closetag -> CLOSETAGOPEN TAGATTRNAME TAGCLOSE .)
    CLOSETAGOPEN    reduce using rule 8 (closetag -> CLOSETAGOPEN TAGATTRNAME TAGCLOSE .)


state 32

    (13) attrvalue -> ATTRVALUE1OPEN ATTRVALUE1STRING . ATTRVALUE1CLOSE

    ATTRVALUE1CLOSE shift and go to state 34


state 33

    (14) attrvalue -> ATTRVALUE2OPEN ATTRVALUE2STRING . ATTRVALUE2CLOSE

    ATTRVALUE2CLOSE shift and go to state 35


state 34

    (13) attrvalue -> ATTRVALUE1OPEN ATTRVALUE1STRING ATTRVALUE1CLOSE .

    TAGATTRNAME     reduce using rule 13 (attrvalue -> ATTRVALUE1OPEN ATTRVALUE1STRING ATTRVALUE1CLOSE .)
    TAGCLOSE        reduce using rule 13 (attrvalue -> ATTRVALUE1OPEN ATTRVALUE1STRING ATTRVALUE1CLOSE .)
    LONETAGCLOSE    reduce using rule 13 (attrvalue -> ATTRVALUE1OPEN ATTRVALUE1STRING ATTRVALUE1CLOSE .)


state 35

    (14) attrvalue -> ATTRVALUE2OPEN ATTRVALUE2STRING ATTRVALUE2CLOSE .

    TAGATTRNAME     reduce using rule 14 (attrvalue -> ATTRVALUE2OPEN ATTRVALUE2STRING ATTRVALUE2CLOSE .)
    TAGCLOSE        reduce using rule 14 (attrvalue -> ATTRVALUE2OPEN ATTRVALUE2STRING ATTRVALUE2CLOSE .)
    LONETAGCLOSE    reduce using rule 14 (attrvalue -> ATTRVALUE2OPEN ATTRVALUE2STRING ATTRVALUE2CLOSE .)

